resources/helm/original/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-dep
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  #- host: nginx.foo.bar.com
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
